--- a/styles.css
+++ b/styles.css
@@ -523,6 +523,10 @@ body {
         gap: 1rem !important;
     }
 
+    .trade-picks-container {
+        max-height: 140px !important;
+    }
+
     .trade-middle {
         transform: rotate(90deg);
         margin: 0.5rem 0;
